--- a/style/share.css
+++ b/style/share.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
@@ -67,7 +67,11 @@ header.window-title input[type=text]:focus {
 }
 
 span.icon {
-    font-family: "Material Symbols Outlined";
+    font-family: "Material Symbols Rounded";
+}
+
+button {
+    font-family: var(--font-text);
 }
 
 .icon-button,
@@ -97,7 +101,7 @@ span.icon {
 
 .icon-button {
     font-size: large;
-    font-family: "Material Symbols Outlined";
+    font-family: "Material Symbols Rounded";
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -144,6 +148,7 @@ span.icon {
     transform: translateX(0);
     padding: 10px 0px 10px 0px;
     box-shadow: var(--shadow);
+    margin-top: 10px;
 }
 
 .dropdown-content.align-left {
@@ -222,6 +227,14 @@ span.icon {
     transition: none;
 }
 
+@media screen and (max-width: 700px){
+    .sidebar {
+        max-width: 100vw;
+        width: calc(100vw -10);
+        border: none;
+    }
+}
+
 .sidebar.show {
     display: block;
     animation: sidebar-slide-in 0.3s ease-out forwards;
@@ -263,4 +276,59 @@ span.icon {
     align-items: center;
     gap: 3px;
     opacity: 75%;
+}
+
+/* toast */
+
+.toast {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: var(--background-color-3);
+    color: var(--text-color);
+    border: 1px solid var(--border-light-color);
+    border-radius: 300px;
+    padding: 0px 20px 0px 20px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    top: 30px;
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    box-shadow: var(--shadow);
+}
+
+.snackbar p {
+    text-align: center;
+    width: 100%;
+}
+
+.toast.show {
+    visibility: visible;
+    animation: ts-fadein 0.5s, ts-fadeout 0.5s 2.5s forwards;
+}
+
+@keyframes ts-fadein {
+    from {
+        top: 0;
+        opacity: 0;
+    }
+
+    to {
+        top: 30px;
+        opacity: 1;
+    }
+}
+
+@keyframes ts-fadeout {
+    from {
+        top: 30px;
+        opacity: 1;
+    }
+
+    to {
+        top: 0;
+        opacity: 0;
+    }
 }
