--- a/style/share.css
+++ b/style/share.css
@@ -116,17 +116,19 @@ button {
     background-color: var(--background-color-3);
 }
 
-@media screen and (max-width: 700px){
-    .hide-on-mobile {
+@media screen and (max-width: 800px){
+    .hide-on-tablet {
         display: none;
-    }
-
-    .left-on-mobile {
-        justify-content: left;
     }
 
     header.window-title input[type=text] {
         width: 90%;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .hide-on-mobile {
+        display: none;
     }
 }
 
@@ -212,32 +214,47 @@ button {
     }
 }
 
-.sidebar {
-    display: none;
-    height: calc(100vh - 48px - 10px);
-    max-width: 300px;
+.main-wrapper {
+    display: flex;
+    height: calc(100vh - 48px); /* exclui o header */
+    transition: margin-left 0.3s ease;
+    overflow: hidden;
+  }
+  .sidebar.show + .main-wrapper {
+    margin-left: 250px;
+  }
+  #editor, #preview {
     width: 100%;
+    height: 100%;
+  }
+  
+  
+
+.sidebar {
+    transition: transform 0.3s ease;
+    overflow: hidden;
+    flex-shrink: 0;
+    display: block;
+
+    height: calc(100vh - 48px - 10px);
     background-color: var(--background-color-2);
     position: absolute;
     z-index: 998;
     padding: 5px;
     border-right: 1px solid var(--border-dark-color);
-    overflow: scroll;
     transform: translateX(-100%);
-    transition: none;
-}
-
-@media screen and (max-width: 700px){
-    .sidebar {
-        max-width: 100vw;
-        width: calc(100vw -10);
-        border: none;
-    }
+    width: 300px;
 }
 
 .sidebar.show {
-    display: block;
-    animation: sidebar-slide-in 0.3s ease-out forwards;
+    transform: translateX(0%);
+}
+
+@media screen and (max-width: 800px){
+    .sidebar.show {
+        width: calc(100vw - 10px);
+        border-right: none;
+    }
 }
 
 .sidebar .file {
