--- a/style/share.css
+++ b/style/share.css
@@ -215,21 +215,21 @@ button {
 }
 
 .main-wrapper {
-    display: flex;
-    height: calc(100vh - 48px); /* exclui o header */
+    height: calc(100vh - 48px);
     transition: margin-left 0.3s ease;
     overflow: hidden;
-  }
-  .sidebar.show + .main-wrapper {
+}
+
+.sidebar.show+.main-wrapper {
     margin-left: 250px;
-  }
-  #editor, #preview {
+}
+
+#editor,
+#preview {
     width: 100%;
     height: 100%;
-  }
+}
   
-  
-
 .sidebar {
     transition: transform 0.3s ease;
     overflow: hidden;
