--- a/style/prompts.css
+++ b/style/prompts.css
@@ -4,11 +4,20 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1001;
+    animation: blackout 0.5s ease-in-out forwards;
+}
+
+@keyframes blackout {
+    0% {
+        background-color: rgba(0, 0, 0, 0);
+    }
+    100% {
+        background-color: rgba(0, 0, 0, 0.5);
+    }
 }
 
 .prompt-dialog {
@@ -18,6 +27,29 @@
     border: 1px solid var(--border-light-color);
     border-radius: 15px;
     width: 300px;
+    animation: showdialog 0.8s forwards;
+}
+
+.prompt-dialog {
+    color: var(--text-color);
+    background-color: var(--background-color);
+    padding: 20px;
+    border: 1px solid var(--border-light-color);
+    border-radius: 15px;
+    width: 300px;
+    animation: showdialog 0.5s ease-in-out forwards;
+}
+
+@keyframes showdialog {
+    0% {
+        transform: scale(0);
+    }
+    60% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 .prompt-title {
@@ -104,4 +136,28 @@
 }
 .table-selector-dialog > .table-item-ex:nth-child(24) {
   border-bottom-right-radius: 10px;
+}
+
+.prompt-dialog div.center {
+    display: block;
+    text-align: center;
+    justify-content: center;
+}
+
+.prompt-dialog hr {
+    border: 0;
+    border-bottom: 1px solid var(--border-light-color);
+    width: 75%;
+}
+
+.prompt-dialog a {
+    color: var(--link-color);
+    display: inline-flex;
+    align-items: center;
+    gap: 5px;
+    text-decoration: none;
+}
+
+.prompt-dialog a:hover {
+    text-decoration: underline;
 }
