--- a/style/palette.css
+++ b/style/palette.css
@@ -62,7 +62,7 @@
     --shadow:               0px 0px 8px #00000022;
 }
 
-.theme-creamy {
+.theme-cream {
     --background-color:     #fdf6e3;
     --background-color-2:   #fffaf0;
     --background-color-3:   #f5eacb;
