--- a/style/prompts.css
+++ b/style/prompts.css
@@ -31,6 +31,7 @@
     box-shadow: var(--shadow);
     margin: 10px;
     animation: showdialog 0.5s ease-in-out forwards;
+    overflow: hidden;
 }
 
 .prompt-dialog.warn {
@@ -152,7 +153,7 @@
 
 .table-item-ex.highlighted {
     background: var(--highlight-color);
-    border: 0;
+    border: 1px solid var(--highlight-color);
     transform: rotateY(180deg);
 }
 
@@ -229,6 +230,6 @@
 }
 
 .prompt-preview-list li.selected-option {
-    background-color: var(--field-color);
+    background-color: var(--hover-color);
     color: var(--text-color);
 }
