--- a/style/editor.css
+++ b/style/editor.css
@@ -36,7 +36,7 @@
 .preview hr {
     border: 0;
     border-bottom: 1px solid var(--border-light-color);
-    width: 75%;
+    width: calc(100% - 20px);
     margin-top: 30px;
     margin-bottom: 30px;
 }
