--- a/style/share.css
+++ b/style/share.css
@@ -283,9 +283,26 @@ button.danger:hover {
 }
 
 .main-wrapper {
+    position: relative;
     height: calc(100vh - 48px);
     transition: margin-left 0.3s ease;
     overflow: hidden;
+}
+
+.status-bar {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    color: var(--text-color);
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+    font-size: small;
 }
 
 .sidebar.show+.main-wrapper {
