--- a/style/palette.css
+++ b/style/palette.css
@@ -33,10 +33,15 @@
 
     
     --quote-note:           #818eff;
+    --quote-note-bg:        #818ef333;
     --quote-tip:            #9aff81; 
+    --quote-tip-bg:         #9aff8133; 
     --quote-important:      #d781ff; 
-    --quote-warning:        #fff781; 
-    --quote-caution:        #ff8881; 
+    --quote-important-bg:   #d781ff33; 
+    --quote-warning:        #fff781;
+    --quote-warning-bg:     #fff78133;
+    --quote-caution:        #ff8881;
+    --quote-caution-bg:     #ff888133;
 }
 
 .theme-light {
@@ -68,10 +73,15 @@
 
     
     --quote-note:           #2178ca; 
+    --quote-note-bg:        #2178ca33; 
     --quote-tip:            #2fca21; 
+    --quote-tip-bg:         #2fca2133; 
     --quote-important:      #9421ca; 
-    --quote-warning:        #caa321; 
+    --quote-important-bg:   #9421ca33; 
+    --quote-warning:        #caa321;
+    --quote-warning-bg:     #caa32133;
     --quote-caution:        #ca2121; 
+    --quote-caution-bg:     #ca212133; 
 }
 
 .theme-cream {
@@ -102,10 +112,15 @@
     --shadow:               0px 0px 6px #00000015;
 
     --quote-note:           #325ba8; 
+    --quote-note-bg:        #325ba833; 
     --quote-tip:            #36a832; 
+    --quote-tip-bg:         #36a83233; 
     --quote-important:      #6f32a8; 
+    --quote-important-bg:   #6f32a833; 
     --quote-warning:        #a88d32; 
+    --quote-warning-bg:     #a88d3233; 
     --quote-caution:        #a83232; 
+    --quote-caution-bg:     #a8323233; 
 }
 
 .theme-cream-dark {
@@ -137,10 +152,15 @@
 
     
     --quote-note:           #6b8eff; 
+    --quote-note-bg:        #6b8eff33; 
     --quote-tip:            #89ff6b; 
+    --quote-tip-bg:         #89ff6b33; 
     --quote-important:      #d06bff; 
+    --quote-important-bg:   #d06bff33; 
     --quote-warning:        #ffe46b; 
+    --quote-warning-bg:     #ffe46b33; 
     --quote-caution:        #ff6b6b; 
+    --quote-caution-bg:     #ff6b6b33; 
 }
 
 
@@ -172,10 +192,15 @@
     --shadow:               5px 5px 0px #000000, 0px 0px 0px 1px #000000;
 
     --quote-note:           #000000;
+    --quote-note-bg:        #00000000;
     --quote-tip:            #000000; 
+    --quote-tip-bg:         #00000000; 
     --quote-important:      #000000; 
+    --quote-important-bg:   #00000000; 
     --quote-warning:        #000000; 
+    --quote-warning-bg:     #00000000; 
     --quote-caution:        #000000; 
+    --quote-caution-bg:     #00000000; 
 
     img {
         filter: grayscale(100);
